--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,11 +1,18 @@
 :root{
-    --fundo-aba: #0a130bd8;
+    
     --borda-cartao: #c5c94ad3;
     --borda-perfil: rgb(206, 229, 241);
+    
     --green: #06be84;
     --green-c: #06c185;
     --blue-l: #1d87bd;
     --cinza-g: #545454;
+    --green-w: #1b9c53;
+    --red-g: #da4c4c;
+
+    --fundo-aba: #0a130bd8;
     --cor-fundo: #293932b5; 
-    --fundo-info: #0d291175;
+    --fundo-info: #09130b96;
+
+    --selec-color: rgb(37, 137, 107);
 }
