--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -12,3 +12,14 @@ a{
     text-decoration: none;
     color: #000;
 }
+
+@keyframes slide-up{
+    from{
+        height: 50%;
+        margin-top: 50%;
+    }
+    to{
+        height: 100%;
+        margin-top: 5px;
+    }
+}
