--- a/src/css/rolagem.css
+++ b/src/css/rolagem.css
@@ -15,7 +15,7 @@
   }
   
   *::-webkit-scrollbar-thumb {
-    background-color: var(--borda-cartao);
+    background-color: var(--green);
     border-radius: 20px;
     border: 3px solid #070d12;
   }
